--- a/BOJ/BOJ.vcxproj.filters
+++ b/BOJ/BOJ.vcxproj.filters
@@ -46,6 +46,9 @@
     <Filter Include="소스 파일\Prog">
       <UniqueIdentifier>{3b07a678-d11e-42ce-9525-5118318997c8}</UniqueIdentifier>
     </Filter>
+    <Filter Include="소스 파일\BST">
+      <UniqueIdentifier>{95fa5ec4-d396-490f-94ef-96cc985cc506}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="15683감시.cpp">
@@ -215,6 +218,9 @@
     </ClCompile>
     <ClCompile Include="조이스틱.cpp">
       <Filter>소스 파일\Prog</Filter>
+    </ClCompile>
+    <ClCompile Include="5639.cpp">
+      <Filter>소스 파일\BST</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
